--- a/first-doc.tex
+++ b/first-doc.tex
@@ -1,5 +1,11 @@
 \documentclass{article}
 
+\title{My first document}
+\date{2018-09-29}
+\author{Marek Dudek}
+
 \begin{document}
+    \maketitle
+    \newpage
     Hello World!
 \end{document}
