lesson one done

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -5,7 +5,9 @@
 \author{Marek Dudek}
 
 \begin{document}
+    \pagenumbering{gobble}
     \maketitle
     \newpage
+    \pagenumbering{arabic}
     Hello World!
 \end{document}
