--- a/first-doc.tex
+++ b/first-doc.tex
@@ -9,5 +9,15 @@
     \maketitle
     \newpage
     \pagenumbering{arabic}
+    \section{Section}
     Hello World!
+    \subsection{Subsection}
+    Structuring a document is easy!
+    \subsubsection{Subsubsection}
+    This is sub-subsection.
+    \paragraph{Paragraph}
+    This is a paragraph.
+    \subparagraph{Subparagraph}
+    This is a subparagraph.
+    \section{Another section}
 \end{document}
