--- a/first-doc.tex
+++ b/first-doc.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+\usepackage{amsmath}
+
 \title{My first document}
 \date{2018-09-29}
 \author{Marek Dudek}
@@ -20,4 +22,10 @@
     \subparagraph{Subparagraph}
     This is a subparagraph.
     \section{Another section}
+    \begin{equation}
+        f(x) = x^2
+    \end{equation}
+    \begin{equation*}
+        f(x) = x^2
+    \end{equation*}
 \end{document}
