--- a/first-doc.tex
+++ b/first-doc.tex
@@ -28,4 +28,48 @@
     \begin{equation*}
         f(x) = x^2
     \end{equation*}
+    \section{Math}
+        This formula $f(x) = x^2$ is an example of embedded formula.
+    \begin{align*}
+ 	1 + 2 &= 3\\
+ 	1 &= 3 - 2
+    \end{align*}
+    \begin{align*}
+ 	f(x) &= x^2\\
+	g(x) &= \frac{1}{x}\\
+	F(x) &= \int^a_b \frac{1}{3}x^3\\
+	G(x) &= \frac{1}{\sqrt{x}}
+    \end{align*}
+    \begin{equation*}
+	    \begin{matrix}
+		1 & 0\\
+		0 & 1
+	    \end{matrix}
+    \end{equation*}
+    \begin{equation*}
+	    \begin{bmatrix}
+		1 & 0\\
+		0 & 1
+	    \end{bmatrix}
+    \end{equation*}
+    \begin{equation*}
+	[
+	\begin{matrix}
+	    1 & 0\\
+	    0 & 1
+	\end{matrix}
+	]
+    \end{equation*}
+    \begin{equation*}
+	\left[
+	\begin{matrix}
+	    1 & 0\\
+	    0 & 1
+	\end{matrix}
+	\right]
+    \end{equation*}
+    \begin{equation*}
+	\left(\frac{1}{\sqrt{x}}\right)
+    \end{equation*}
+    This is $\lambda$ mode!
 \end{document}
