--- a/first-doc.tex
+++ b/first-doc.tex
@@ -1,16 +1,19 @@
 \documentclass{article}
 
 \usepackage{amsmath}
+\usepackage{graphicx}
 
 \title{My first document}
 \date{2018-09-29}
 \author{Marek Dudek}
 
 \begin{document}
+
     \pagenumbering{gobble}
     \maketitle
     \newpage
     \pagenumbering{arabic}
+
     \section{Section}
     Hello World!
     \subsection{Subsection}
@@ -21,37 +24,46 @@
     This is a paragraph.
     \subparagraph{Subparagraph}
     This is a subparagraph.
+
     \section{Another section}
-    \begin{equation}
-        f(x) = x^2
-    \end{equation}
-    \begin{equation*}
-        f(x) = x^2
-    \end{equation*}
+
     \section{Math}
+
+	    \begin{equation}
+		f(x) = x^2
+	    \end{equation}
+	    \begin{equation*}
+		f(x) = x^2
+	    \end{equation*}
+
         This formula $f(x) = x^2$ is an example of embedded formula.
+
     \begin{align*}
  	1 + 2 &= 3\\
  	1 &= 3 - 2
     \end{align*}
+
     \begin{align*}
  	f(x) &= x^2\\
 	g(x) &= \frac{1}{x}\\
 	F(x) &= \int^a_b \frac{1}{3}x^3\\
 	G(x) &= \frac{1}{\sqrt{x}}
     \end{align*}
+
     \begin{equation*}
 	    \begin{matrix}
 		1 & 0\\
 		0 & 1
 	    \end{matrix}
     \end{equation*}
+
     \begin{equation*}
 	    \begin{bmatrix}
 		1 & 0\\
 		0 & 1
 	    \end{bmatrix}
     \end{equation*}
+
     \begin{equation*}
 	[
 	\begin{matrix}
@@ -60,6 +72,7 @@
 	\end{matrix}
 	]
     \end{equation*}
+
     \begin{equation*}
 	\left[
 	\begin{matrix}
@@ -68,8 +81,23 @@
 	\end{matrix}
 	\right]
     \end{equation*}
+
     \begin{equation*}
 	\left(\frac{1}{\sqrt{x}}\right)
     \end{equation*}
-    This is $\lambda$ mode!
+
+    This is $\lambda$!
+
+    \newpage
+
+    \section{Pictures}
+
+    \begin{figure}
+	\includegraphics[width=\linewidth]{images/boat.png}
+	\caption{A boat.}
+	\label{fig:boat1}
+    \end{figure}
+
+    Figure \ref{fig:boat1} shows a boat.
+
 \end{document}
