--- a/first-doc.tex
+++ b/first-doc.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{subcaption}
+\usepackage{setspace}
 
 \title{My first document}
 \date{2018-09-29}
@@ -14,8 +15,12 @@
 
     \pagenumbering{gobble}
     \maketitle
+
     \newpage
+    \doublespacing
     \tableofcontents
+    \singlespacing
+
     \newpage
     \pagenumbering{arabic}
 
