lesson seven - bibliography

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -134,9 +134,16 @@
 
     \newpage
 
+    \section{Using BibTeX}
+
+    Random citation \cite{DUMMY:1} embedded in text.
+    
     \begin{appendix}
 	\listoffigures
 	\listoftables
     \end{appendix}
+
+    \bibliography{dummy}
+    \bibliographystyle{ieeetr}
 
 \end{document}
