--- a/first-doc.tex
+++ b/first-doc.tex
@@ -4,12 +4,15 @@
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{setspace}
+\usepackage[backend=bibtex,style=verbose-trad2]{biblatex}
 
 \title{My first document}
 \date{2018-09-29}
 \author{Marek Dudek}
 
 \setcounter{tocdepth}{1}
+
+\bibliography{dummy}
 
 \begin{document}
 
@@ -136,14 +139,14 @@
 
     \section{Using BibTeX}
 
-    Random citation \cite{DUMMY:1} embedded in text.
+    Random citation \autocite[1]{DUMMY:1} embedded in text.
+
+    \newpage
     
     \begin{appendix}
 	\listoffigures
 	\listoftables
     \end{appendix}
 
-    \bibliography{dummy}
-    \bibliographystyle{ieeetr}
 
 \end{document}
