lesson eight - footnotes

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -142,6 +142,19 @@
     Random citation \autocite[1]{DUMMY:1} embedded in text.
 
     \newpage
+
+    \section{Footnotes}
+
+    \paragraph{}
+    This is some example text\footnote{\label{myfootnote}Hello footnote!} with footnote.
+
+    \paragraph{}
+    Some other text.
+
+    \paragraph{}
+    I'm refering to footnote \ref{myfootnote}.
+
+    \newpage
     
     \begin{appendix}
 	\listoffigures
