--- a/first-doc.tex
+++ b/first-doc.tex
@@ -5,6 +5,7 @@
 \usepackage{subcaption}
 \usepackage{setspace}
 \usepackage[backend=bibtex,style=verbose-trad2]{biblatex}
+\usepackage{siunitx}
 
 \title{My first document}
 \date{2018-09-29}
@@ -13,6 +14,11 @@
 \setcounter{tocdepth}{1}
 
 \bibliography{dummy}
+
+\sisetup{
+    round-mode = places,
+    round-precision = 2
+}
 
 \begin{document}
 
@@ -153,6 +159,25 @@
 
     \paragraph{}
     I'm refering to footnote \ref{myfootnote}.
+
+    \newpage
+
+    \section{Tables}
+
+    \begin{table}[h!]
+	\begin{center}
+	    \caption{Your first table.}
+	    \label{tab:table1}
+	    \begin{tabular}{l|S|r}
+		\textbf{Value 1} & \textbf{Value 2} & \textbf{Value 3}\\
+		$\alpha$ & $\beta$ & $\gamma$\\
+		\hline
+		1 & 1110.1 & a\\
+		2 & 10.1 & b\\
+		3 & 23.113231 & c\\
+	    \end{tabular}
+	\end{center}
+    \end{table}    
 
     \newpage
     
