--- a/first-doc.tex
+++ b/first-doc.tex
@@ -168,13 +168,16 @@
 	\begin{center}
 	    \caption{Your first table.}
 	    \label{tab:table1}
-	    \begin{tabular}{l|S|r}
-		\textbf{Value 1} & \textbf{Value 2} & \textbf{Value 3}\\
-		$\alpha$ & $\beta$ & $\gamma$\\
+	    \begin{tabular}{l|S|r|l}
+		\textbf{Value 1} & \textbf{Value 2} & \textbf{Value 3} & \textbf{Value 4} \\
 		\hline
-		1 & 1110.1 & a\\
-		2 & 10.1 & b\\
-		3 & 23.113231 & c\\
+		$\alpha$         & $\beta$          & $\gamma$         & $\delta$         \\
+		\hline
+		1 & 1110.1    & a & e \\
+		2 & 10.1      & b & f \\
+		3 & 23.113231 & c & g \\
+		4 & 25.113231 & d & h \\
+		\hline
 	    \end{tabular}
 	\end{center}
     \end{table}    
