--- a/first-doc.tex
+++ b/first-doc.tex
@@ -197,9 +197,11 @@
 		\multicolumn{2}{c|}{12} & a \\
 		\hline
 		2 & 10.1 & b \\ 
-		3 & 20.2 & c \\ 
-		4 & 30.3 & d \\ 
-		5 & 40.4 & f \\ 
+		\hline
+		3 & \multicolumn{2}{c|}{\multirow{2}{*}{1234}} \\ 
+		4 & \multicolumn{2}{c|}{} \\ 
+		\hline
+		5 & 40.4 & e \\ 
 	    \end{tabular}
 	\end{center}
     \end{table}
