--- a/first-doc.tex
+++ b/first-doc.tex
@@ -8,6 +8,7 @@
 \usepackage{siunitx}
 \usepackage{multirow}
 \usepackage{booktabs}
+\usepackage{longtable}
 
 \title{My first document}
 \date{2018-09-29}
@@ -209,6 +210,137 @@
 	    \end{tabular}
 	\end{center}
     \end{table}
+
+    \paragraph{}
+
+    Long table
+
+    \begin{longtable}[c]{l|S|r}
+	\caption{Long table.}
+	\label{tab:table3}\\
+	\toprule
+	Column 1 & \textbf{Column 2} & Column 3 \\
+	$\alpha$ & $\beta$  & $\gamma$ \\
+	\midrule
+	\endfirsthead
+	\toprule
+	Column 1 & \textbf{Column 2} & Column 3 \\
+	\midrule
+	\endhead
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	5 & 40.4 & e \\ 
+	2 & 10.1 & b \\ 
+	5 & 40.4 & e \\ 
+	\bottomrule
+    \end{longtable}
 
     \newpage
     
